corrected alignment for tea of the month

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,12 +30,17 @@ nav {
 }
 
 .spacer{
-height: 70px;
+padding-top: 70px;
+}
+
+h2 {
+    margin-top: 10px;
 }
 
 .hero {
      height: 700px;
      width: 1200px;
+     margin: auto;
      background-image: url(../images/img-mission-background.jpeg);
      display: flex;
      flex-wrap: wrap;
@@ -49,19 +54,24 @@ height: 70px;
 }
 
 .month {
-    width: 1000px;
+    max-width: 1000px;
+    margin: 100px auto 0px;
 }
 
 .blurbs {
-    width: 1000px;
     display: flex;
     flex-wrap: wrap;
-  
+    justify-content: center;
+}
+
+figure{
+    margin: 10px;
 }
 
 .locations {
   height: 500px;
   width: 1200px;
+  margin: auto;
   background-image: url(../images/img-locations-background.jpeg);
   display: flex;
   flex-direction: column;
